--- a/TIC-TAC-TOE/index.html
+++ b/TIC-TAC-TOE/index.html
@@ -13,23 +13,23 @@
         <table id="main">
             <p></p>
             <tr>
-                <td id="0" ></td>
-                <td id="1" ></td>
-                <td id="2" ></td>
+                <td id="0"></td>
+                <td id="1"></td>
+                <td id="2"></td>
             </tr>
             <tr>
-                <td id="3" ></td></td>
-                <td id="4" ></td>
-                <td id="5" ></td>
+                <td id="3"></td>
+                <td id="4"></td>
+                <td id="5"></td>
             </tr>
             <tr>
-                <td id="6" ></td>
-                <td id="7" ></td>
-                <td id="8" ></td>
+                <td id="6"></td>
+                <td id="7"></td>
+                <td id="8"></td>
             </tr>
         </table>
         <br>
-        <div id="button" style="">
+        <div id="button">
             <button id="resetButton">Reset the game</button>
         </div>
     </main>
